--- a/html/guitarras.html
+++ b/html/guitarras.html
@@ -11,26 +11,26 @@
 </head>
 
 <body>
+  <!-- MENU  -->
   <header id="header">
     <div class="center">
-      <!-- LOGO  -->
-      <div id="logo">
-        <img src="../img/fox.webp" class="logo" alt="logotipo">
-      </div>
-      <!-- MENU  -->
-      <nav id="menu">
-        <ul>
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="../html/guitarras.html">Guitarras</a></li>
-          <li><a href="../html/accesorios.html">Accesorios</a></li>
-          <li><a href="../html/formulario.html">Usuarios</a></li>
-        </ul>
-      </nav>
-
-      <!-- LIMPIAR FLOTADOS  -->
-      <div class="clearfix"></div>
+        <nav>
+            <section class="contenedor nav">
+                <div class="enlaces-header">
+                    <a href="../index.html">inicio</a>
+                    <a href="../html/guitarras.html">Guitarras</a>
+                    <a href="../html/accesorios.html">Accesorios</a>
+                    <a href="../html/formulario.html">Usuario</a>
+                </div>
+                <div class="hamburguer">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+            </section>
+        </nav>
+        <!-- LIMPIAR FLOTADOS  -->
+        <div class="clearfix"></div>
     </div>
-  </header>
+</header>
 
   <div id="slider" class="slider">
     <h1>GUITARRAS</h1>
@@ -42,10 +42,10 @@
       <div id="articles">
         <div class="guitarElect">
           <div class="guitar_flex">
-            <div>
+
+            <div class="guitarra">
               <div class="image-wrap">
-                <img src="../img/Guitarra eléctrica Fender Stratocaster.png"
-                  alt="Guitarra eléctrica Fender Stratocaster">
+                <img src="../img/Guitarra eléctrica Fender Stratocaster.jpg" alt="Guitarra eléctrica Fender Stratocaster"  id="guitarras">
               </div>
               <h2>Guitarra eléctrica Fender Stratocaster</h2>
               <span class="date">
@@ -57,9 +57,9 @@
               </div>
             </div>
 
-            <div>
+            <div class="guitarra">
               <div class="image-wrap">
-                <img src="../img/Guitarra eléctrica Gibson Les Paul.png" alt="Guitarra eléctrica Gibson Les Paul">
+                <img src="../img/Guitarra eléctrica Gibson Les Paul.jpg" alt="Guitarra eléctrica Gibson Les Paul" id="guitarras">
               </div>
               <h2>Guitarra eléctrica Gibson Les Paul</h2>
               <span class="date">
@@ -78,9 +78,9 @@
       <div id="articles">
         <div class="guitarAcustic">
           <div class="guitar_flex">
-            <div>
+            <div class="guitarra">
               <div class="image-wrap">
-                <img src="../img/Guitarra acústica Martin D-28.jpg" alt="Guitarra acústica Martin D-28">
+                <img src="../img/Guitarra acústica Martin D-28.jpg" alt="Guitarra acústica Martin D-28"  id="guitarras">
               </div>
               <h2>Guitarra acústica Martin D-28</h2>
               <span class="date">
@@ -92,9 +92,10 @@
               </div>
             </div>
 
-            <div>
+
+            <div class="guitarra">
               <div class="image-wrap">
-                <img src="../img/Guitarra acústica Taylor 214ce.png" alt="Guitarra acústica Taylor 214ce">
+                <img src="../img/Guitarra acústica Taylor 214ce.jpg" alt="Guitarra acústica Taylor 214ce"  id="guitarras">
               </div>
               <h2>Guitarra acústica Taylor 214ce</h2>
               <span class="date">
@@ -110,11 +111,7 @@
       </div>
     </div>
   </div>
-
-  
-
-
-  </section>
+</section>
 
   <footer id="footer">
     <div class="center">
@@ -128,6 +125,7 @@
 
   </div>
   <script src="https://kit.fontawesome.com/8a47cc8987.js" crossorigin="anonymous"></script>
+  <Script src="../js/my.js"></Script>
 </body>
 
 </html>
