--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guitarist_Fox</title>
-    <link rel="stylesheet" href="../Guitarist_Fox/css/style.css">
-    <link rel="icon" href="../Guitarist_Fox/img/fox.webp">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/fox.webp">
 </head>
 <body>
     <header id="header">
         <div class="center">
-            <!-- LOGO  -->
-            <div id="logo">
-                <img src="../Guitarist_Fox/img/fox.webp" class="logo" alt="logotipo">
-            </div>
             <!-- MENU  -->
-            <nav id="menu">
-                <ul>
-                  <li><a href="../Guitarist_Fox/index.html">Inicio</a></li>
-                  <li><a href="../Guitarist_Fox/html/guitarras.html">Guitarras</a></li>
-                  <li><a href="../Guitarist_Fox/html/accesorios.html">Accesorios</a></li>
-                  <li><a href="../Guitarist_Fox/html/formulario.html">Usuarios</a></li>
-                </ul>
+            <nav>
+                <section class="contenedor nav">
+                    <div class="enlaces-header">
+                        <a href="index.html">inicio</a>
+                        <a href="html/guitarras.html">Guitarras</a>
+                        <a href="html/accesorios.html">Accesorios</a>
+                        <a href="html/formulario.html">Usuario</a>
+                    </div>
+                    <div class="hamburguer">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+                </section>
             </nav>
             <!-- LIMPIAR FLOTADOS  -->
             <div class="clearfix"></div>
@@ -31,7 +32,7 @@
 
     <div id="slider" class="slider-big">
         <h1>Guitarist_Fox</h1>
-        <a href="../Guitarist_Fox/html/guitarras.html" class="btn-white">Ver Guitarras</a>
+        <a href="html/guitarras.html" class="btn-white">Ver Guitarras</a>
     </div>
 
     <div class="center">
@@ -85,5 +86,6 @@
         </div>
     </footer>
 <script src="https://kit.fontawesome.com/8a47cc8987.js" crossorigin="anonymous"></script>
+<Script src="js/my.js"></Script>
 </body>
 </html>
