update media cuerrist

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <a href="html/formulario.html">Usuario</a>
                     </div>
                     <div class="hamburguer">
-                        <i class="fa-solid fa-bars"></i>
+                        <i class="fa-solid fa-guitar" style="color: #000000;"></i>
                     </div>
                 </section>
             </nav>
